# genet

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSES.md  README.md  rust-toolchain.toml  rustfmt.toml
components/chisel/: Cargo.toml
components/chisel/src/: arrange.rs  glyphs.rs  grid.rs  lib.rs  path.rs  slot.rs
components/errand/: Cargo.toml  LICENSE-MIT  README.md
components/errand/protocols/guppy-protocol/: Cargo.toml  README.md
components/errand/protocols/nex-protocol/: Cargo.toml  (+1 more)
components/errand/src/: finger.rs  gemini.rs  gopher.rs  guppy.rs  lib.rs  misfin.rs  nex.rs  plain.rs  spartan.rs  titan.rs  tls.rs  tofu.rs
components/genet-clipboard/: Cargo.toml  lib.rs  system.rs
components/genet-documents/: Cargo.toml  README.md
components/genet-documents/src/: document.rs  engines.rs  lib.rs  net_fetch.rs  smolweb.rs
components/genet-extract/: Cargo.toml  lib.rs
components/genet-host-api/: Cargo.toml  lib.rs  tile.rs
components/genet-layout/: Cargo.toml  a11y.rs  adapter.rs  adapter_stylo.rs  animation_events.rs  box_tree.rs  caret.rs  cascade.rs  computed_query.rs  forest.rs  fragment.rs  genet_lane.rs  highlights.rs  host_loader.rs  image_decode.rs  incremental.rs  inline_hit.rs  invalidate.rs  layout.rs  lib.rs  link_harvest.rs  overlays.rs  paint_emit.rs  paint_stacking.rs  query.rs  snapshot.rs  style.rs  subtree.rs  text_measure.rs  transition_events.rs  ua_defaults.rs  viewport.rs
components/genet-layout/construct/: gather.rs  list_marker.rs  mod.rs
components/genet-layout/examples/: phase_timing.rs
components/genet-layout/tests/: livery_parity.rs  native_css_seed.rs
components/genet-livery/: Cargo.toml  README.md
components/genet-livery/src/: document.rs  dom.rs  invalidation.rs  layout.rs  lib.rs  paint.rs  style.rs  text.rs
components/genet-livery/tests/: cambium_lane.rs  cssom.rs  interaction.rs  invalidation.rs  paint.rs  reftest.rs  replaced_image.rs
components/genet-probe/: Cargo.toml  lib.rs  scenario.rs
components/genet-render/: Cargo.toml
components/genet-render/src/: a11y.rs  inspect.rs  lib.rs  render.rs
components/genet-scripted/: Cargo.toml  capture.rs  document.rs  lib.rs  livery.rs
components/genet-scripted-dom/: Cargo.toml  forms.rs  lib.rs  serialize.rs
components/genet-static-dom/: Cargo.toml
components/genet-static-html/: Cargo.toml  lib.rs
components/illume/: Cargo.toml  LICENSE-MIT  README.md
components/illume/src/: entity.rs  highlight.rs  injection.rs  lib.rs  pack.rs  tree.rs
components/inker/: Cargo.toml  README.md
components/inker/document-canvas/: Cargo.toml  README.md
components/inker/knot-editor-host/: Cargo.toml  README.md
components/inker/src/: a11y.rs  document.rs  engine.rs  lib.rs  routing.rs  session_engine.rs  sniff.rs  statements.rs  surface_engine.rs
components/livery/: Cargo.toml  PROPERTY_SPACE.md  README.md  build.rs  properties.toml
components/livery/src/: cascade.rs  custom.rs  lib.rs  media.rs  selector.rs  stylesheet.rs
components/livery/tests/: cascade.rs  catalog_contract.rs  computed_values.rs  custom_properties.rs  media.rs  property_space.rs  selectors.rs  stylesheet.rs  values.rs
components/malloc_size_of/: Cargo.toml  lib.rs
components/nematic/: Cargo.toml  README.md
components/nematic/examples/: knot-render.rs
components/nematic/src/: feed.rs  file.rs  finger.rs  gemtext.rs  gopher.rs  guppy.rs  knot.rs  lib.rs  markdown.rs  misfin.rs  nex.rs  scroll.rs  spartan.rs  text.rs  titan.rs  views.rs
components/netfetcher/: .gitignore  Cargo.toml  README.md
components/netfetcher/src/: client.rs  data_url.rs  lib.rs  referrer.rs  request.rs  websocket.rs
components/paint/: Cargo.toml  compositor.rs  compositor_calayer.rs  compositor_dxgi.rs  compositor_factory.rs  compositor_wayland.rs  lib.rs  netrender_painter.rs  paint.rs  painter.rs  pinch_zoom.rs  screenshot.rs  touch.rs  translator.rs  web_content_animation.rs  webgl_external_image_lifecycle.rs  webrender_external_images.rs  webview_renderer.rs  wgpu_webgl_external_images.rs
components/paint/compositor_calayer/: errors.rs  iosurface.rs
components/paint/compositor_wayland/: bake.rs  dmabuf.rs  errors.rs  mod.rs  wayland.rs
components/paint/interop/: mod.rs  vulkan_timeline.rs  windows_dx12.rs
components/paint/netrender_painter/: test_support.rs
components/paint/tests/: c4_smoke_probe.rs  html_to_pixels_e2e.rs  paint_list_render_e2e.rs  paint_render_e2e.rs  webgl_canvas_texture_e2e.rs
components/script-engine-api/: Cargo.toml  lib.rs
components/script-engine-boa/: Cargo.toml  lib.rs
components/script-engine-nova/: Cargo.toml  lib.rs
components/script-engine-nova/tests/: regress_regex_features.rs  wtf8_indexing_regression.rs
components/script-engine-piccolo/: Cargo.toml  lib.rs
components/script-runtime-api/: Cargo.toml  dom.rs  fetch.rs  harness.rs  lib.rs  platform.rs  selector.rs  webgl.rs
components/script-runtime-api/dom/: bootstrap.js  html_interfaces.rs  mod.rs  query_traverse.rs  tests.rs  tree.rs  xpath_eval.rs
components/script-runtime-api/tests/: fetch_binding.rs  webgl_binding.rs
components/script-runtime-api/tools/: scheduler_trace_to_tla.py
components/script-runtime-api/webgl/: bootstrap.js  commands.rs  mod.rs
components/serval-documents/: Cargo.toml  README.md
components/serval-documents/src/: engines.rs  lib.rs  smolweb.rs
components/serval-extract/: Cargo.toml  lib.rs
components/serval-layout/: Cargo.toml  a11y.rs  adapter.rs  adapter_stylo.rs  box_tree.rs  caret.rs  cascade.rs  computed_query.rs  construct.rs  cv_to_taffy.rs  font_metrics.rs  fragment.rs  host_loader.rs  image_decode.rs  incremental.rs  inline_hit.rs  invalidate.rs  layout.rs  layout_provider.rs  lib.rs  link_harvest.rs  overlays.rs  paint_emit.rs  paint_stacking.rs  query.rs  serval_lane.rs  snapshot.rs  style.rs  subtree.rs  text_measure.rs  transition_events.rs  ua_defaults.rs  viewport.rs
components/serval-layout/construct/: gather.rs  list_marker.rs  mod.rs  style_read.rs
components/serval-layout/examples/: phase_timing.rs
(+1280 files in other folders)
