[workspace]
resolver = "2"
members = [
    "components/media/examples",
    "components/shared/engine-observables-api",
    "components/shared/paint-types",
    "components/xpath",
    "components/webgl-wgpu",
    "components/webgl-essl",
    "components/genet-layout",
    "components/livery",
    "components/genet-livery",
    "components/genet-static-dom",
    "components/genet-extract",
    "components/genet-scripted-dom",
    "components/genet-scripted",
    "components/genet-scripted-worker",
    "components/genet-static-html",
    "components/xilem-core",
    "components/xilem-serval",
    "components/chisel",
    "components/verso-tile",
    # The engine-management layer, adopted from mere 2026-07-10
    # (docs/2026-07-09_inker_genet_adoption_plan.md): inker (contracts +
    # document/surface registries) with its surface adapters + document-canvas
    # + knot-editor-host nested, and nematic promoted to a top-level component.
    "components/inker",
    "components/inker/document-canvas",
    "components/inker/knot-editor-host",
    "components/inker/engines/scrying-engine",
    "components/inker/engines/graft-engine",
    "components/inker/engines/weld-engine",
    "components/nematic",
    # The smolweb wire layer, adopted 2026-07-10 (same plan): transport + parse,
    # with its spec-faithful protocol crates as members keeping their own
    # published identities.
    "components/errand",
    "components/errand/protocols/nex-protocol",
    "components/errand/protocols/spartan-protocol",
    "components/errand/protocols/guppy-protocol",
    # The text/editing column's portable pair, adopted 2026-07-10 (same plan):
    # illume (lexer/highlighter spans) + tinct (OKLCH palette derivation).
    "components/illume",
    "components/tinct",
    # The content lanes as session engines (2026-07-10 session-engines plan):
    # static/scripted/smolweb retained documents, promoted out of pelt.
    "components/genet-documents",
    "components/genet-winit-host",
    "components/genet-render",
    "components/shared/layout-dom",
    "components/script-engine-api",
    # script-engine-boa joined the workspace 2026-05-25. The old blocker (boa
    # 0.21.1's icu_normalizer ~2.0 vs parley 0.9's ^2.1.1) was resolved by forking
    # boa to crates/boa (`genet` branch) and widening its icu family ~2.0 -> ^2.1,
    # which resolves to icu 2.2.0 — the version nova_vm's temporal_rs -> icu_calendar
    # chain forces, and which parley accepts. Patched in via [patch.crates-io] below.
    "components/script-engine-boa",
    "components/script-engine-nova",
    "components/script-engine-piccolo",
    "components/script-runtime-api",
    "ports/pelt-core",
    "ports/pelt-desktop",
    "ports/pelt",
    "ports/genet-wpt",
    "tests/unit/*",
]
default-members = ["ports/pelt"]
# The SpiderMonkey-backed scripting stack (components/script,
# script_bindings, and the heavy Servo subsystems: layout, net, canvas,
# constellation, devtools, metrics, storage, timers, webdriver_server,
# bluetooth, background_hang_monitor) plus its `tests/unit/script`
# (`script_tests`) were deleted 2026-05-20 — they were already cut from
# the build graph (not workspace members, not reachable from `pelt`).
# Git history is the reference for the eventual scripting rebuild. See
# docs/2026-05-20_stylo_taffy_adoption_plan.md (and the cut commit).
exclude = [".cargo"]

[workspace.package]
version = "0.2.0"
authors = ["The Servo Project Developers"]
repository = "https://github.com/servo/servo"
# A generic description for packages that don't have a meaningful description yet.
description = "A component of the servo web-engine."
license = "MPL-2.0"
edition = "2024"
publish = false
# We have yet to decide on a policy for updating the minimum supported Rust version.
# Before increasing this, please open a discussion on Zulip explaining the reason
# why we should consider increasing our minimum supported Rust version.
# Please also note, that the **default** Rust version in rust-toolchain.toml may be
# bumped freely.
# Skip 1.90 which causes mis-compilation: https://github.com/rust-lang/rust/issues/147265
rust-version = "1.86.0"

[workspace.dependencies]
accesskit = { version = "0.24.0", features = ["serde"] }
# Platform AccessKit adapters for the winit host bridge (genet-winit-host::a11y),
# tracking accesskit 0.24. Target-gated in the consuming crate, so a non-native
# build (wasm) never pulls them.
accesskit_windows = "0.32"
accesskit_macos = "0.26"
accesskit_unix = "0.21"
app_units = "0.7"
arboard = "3"
argon2 = { version = "0.5", features = ["alloc"] }
arrayvec = "0.7"
async-tungstenite = { version = "0.34", features = ["tokio-rustls-webpki-roots"] }
atomic_refcell = "0.1.14"
# aws-lc-rs removed 2026-05-15 per Mark's directive: genet should default to
# pure-Rust crypto, not aws-lc's NASM-required C+asm crypto. The only consumers
# (components/script, components/net) are now either gated out (script via
# tests/unit/script exclusion above) or already dead (net). Crypto provider
# for any future rustls revival should use `ring` (rustls feature `ring`,
# pre-built asm on Windows since ring 0.17 — no NASM needed) or
# `rustls-rustcrypto` (fully pure Rust, slower).
backtrace = "0.3"
base64 = "0.22.1"
base64ct = { version = "1.8", features = ["alloc"] }
bitflags = "2.11"
brotli = "8.0.2"
bytemuck = "1"
byteorder = "1.5"
bytes = "1.0"
byte-slice-cast = "1.2.3"
cfg-if = "1.0.4"
chardetng = "0.1"
chrono = { version = "0.4", features = ["serde"] }
content-security-policy = { version = "0.8.0", features = ["serde"] }
cookie = { package = "cookie", version = "0.18" }
crossbeam-channel = "0.5"
cssparser = { version = "0.37", features = ["serde"] }
data-url = "0.3"
dpi = "0.1"
dwrote = "0.11.5"
encoding_rs = { version = "0.8", features = ["serde"] }
env_logger = "0.11"
euclid = "0.22"
flate2 = "1.1"
freetype-sys = "0.20"
futures = { version = "0.3", default-features = false }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
glib = "0.22"
glib-sys = "0.22"
gstreamer = { version = "0.25", features = ["v1_18"] }
gstreamer-app = "0.25"
gstreamer-audio = "0.25"
gstreamer-base = "0.25"
gstreamer-gl = "0.25"
gstreamer-gl-egl = "0.25"
gstreamer-gl-sys = "0.25"
gstreamer-gl-wayland = "0.25"
gstreamer-gl-x11 = "0.25"
gstreamer-play = "0.25"
gstreamer-sdp = "0.25"
gstreamer-sys = "0.25"
gstreamer-video = "0.25"
gstreamer-webrtc = { version = "0.25", features = ["v1_18"] }
harfbuzz-sys = "0.6.1"
headers = "0.4"
hitrace = { version = "0.2.0", features = ["api-19", "tracing-rs"] }
html5ever = "0.39"
http = "1.4"
http-body-util = "0.1"
hyper = "1.9"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "logging", "tls12", "webpki-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http2", "tokio", "client-proxy"] }
icu_locale_core = "2.2.0"
icu_properties = "2.2.0"
icu_segmenter = "2.2.0"
image = { version = "0.25", default-features = false, features = ["avif", "rayon", "bmp", "gif", "ico", "jpeg", "png", "webp"] }
imsz = "0.4"
indexmap = { version = "2.14.0", features = ["std"] }
inventory = { version = "0.3.24" }
ipc-channel = "0.22"
itertools = "0.14"
js = { package = "mozjs", version = "=0.15.14", default-features = false, features = ["libz-sys", "intl"] }
keyboard-types = { version = "0.8.3", features = ["serde", "webdriver"] }
kurbo = { version = "0.13", features = ["euclid"] }
libc = "0.2"
lru = "0.18"
log = "0.4.29"
mach2 = "0.6"
malloc_size_of_derive = "0.1"
markup5ever = "0.39"
memmap2 = "0.9.10"
mime = "0.3.13"
mime-multipart-hyper1 = "0.10.0"
mime_guess = "2.0.5"
nix = "0.30"
nom = "8.0.0"
nom-rfc8288 = "0.4.0"
num-complex = "0.4.6"
num-derive = "0.4.2"
num-traits = "0.2"
num_cpus = "1.17.0"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-text = "0.3.2"
# C4 macOS compositor backend deps. Used by `compositor_calayer.rs`.
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-metal = "0.3.2"
objc2-io-surface = "0.3.2"
ocb3 = "0.1.0"
openxr = "0.20"
p384 = { version = "0.13", features = ["ecdh"] }
p521 = { version = "0.13", features = ["ecdh"] }
parking_lot = { version = "0.12", features = ["serde"] }
parley = { version = "0.10.0", default-features = true }
# The engine-management family, adopted from mere 2026-07-10 (inker-adoption
# plan). inker + nematic publish (0.1.0); the rest inherit publish = false.
# errand (the smolweb wire layer) + its protocol members adopted the same day,
# all published crates keeping their identities.
errand = { version = "=0.1.3", path = "components/errand" }
nex-protocol = { version = "=0.1.1", path = "components/errand/protocols/nex-protocol" }
spartan-protocol = { version = "=0.1.1", path = "components/errand/protocols/spartan-protocol" }
guppy-protocol = { version = "=0.1.1", path = "components/errand/protocols/guppy-protocol" }
inker = { version = "=0.1.0", path = "components/inker" }
genet-documents = { version = "=0.1.0", path = "components/genet-documents" }
nematic = { version = "=0.1.0", path = "components/nematic" }
document-canvas = { version = "=0.1.0", path = "components/inker/document-canvas" }
knot-editor-host = { version = "=0.1.0", path = "components/inker/knot-editor-host" }
scrying-engine = { version = "=0.2.0", path = "components/inker/engines/scrying-engine" }
graft-engine = { version = "=0.2.0", path = "components/inker/engines/graft-engine" }
weld-engine = { version = "=0.2.0", path = "components/inker/engines/weld-engine" }
pelt-core = { version = "=0.1.0", path = "ports/pelt-core" }
pelt-desktop = { version = "=0.2.0", path = "ports/pelt-desktop" }
netrender = { git = "https://github.com/mark-ik/netrender.git", branch = "main", version = "0.1.0" }
netrender_device = { git = "https://github.com/mark-ik/netrender.git", branch = "main", version = "0.1.0" }
# (No xilem git deps remain. The Masonry-era `xilem` / `masonry` /
# `masonry_winit` git deps left with pelt-viewer's retirement, 2026-06-12. The
# last survivor, `xilem_core`, was vendored into `components/xilem-core` (a
# verbatim Apache-2.0 mirror of upstream main) and is consumed by
# `components/xilem-serval` via a path dep, so a bare genet clone needs no
# mark-ik/xilem fork checkout.)
peniko = "0.6"
percent-encoding = "2.3"
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
proc-macro2 = "1"
quote = "1"
rand = "0.9"
rangemap = "1.7.1"
raw-window-handle = "0.6"
rayon = "1"
read-fonts = "0.39.2"
regex = "1.12"
resvg = "0.47.0"
rsa = { version = "0.9.10", features = ["sha1", "sha2"] }
rustc-hash = "2.1.2"
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12"] }
rustls-pki-types = "1.14"
rustls-platform-verifier = "0.7.0"
sea-query = { version = "=1.0.0-rc.31", default-features = false, features = ["backend-sqlite", "derive"] }
sea-query-rusqlite = { version = "=0.8.0-rc.15" }
selectors = "0.39.0"
serde = "1.0.228"
serde_bytes = "0.11"
serde_core = "1.0.226"
serde_json = "1.0"
servo_arc = "0.4.3"
sha2 = "0.10"
speexdsp-resampler = "0.1.0"
# Font enumeration + family resolution, the same stack parley uses (so the
# cascade's font-metrics provider resolves fonts identically to text layout).
fontique = "0.10.0"
skrifa = "0.42.1"
smallvec = { version = "1.15", features = ["serde", "union"] }
string_cache = "0.9"
strum = { version = "0.28", features = ["derive"] }
# Workspace-dependency KEY is `style` (not `stylo`) because the package's own
# `[lib] name = "style"` (servo's convention; unchanged by the T1 rename —
# see docs/2026-07-12_ring3_fork_rename_publish_plan.md). Cargo's extern-name
# binding rule: with no `package =` override, a dependency is visible under
# its target's OWN `[lib] name`; ADDING `package =` (needed here, since the
# real crate is renamed to `genet-stylo`) switches that to the TOML key
# instead — so the key must equal the desired import name (`style::...`,
# used workspace-wide) or every consumer's source breaks. `stylo_atoms` /
# `stylo_dom` / `stylo_static_prefs` have no such mismatch (their `[lib]
# name` already equals their old package name), so their keys are untouched.
style = { version = "0.19.0", package = "genet-stylo" }
stylo_atoms = { version = "0.19.0", package = "genet-stylo-atoms" }
stylo_dom = { version = "0.19.0", package = "genet-stylo-dom" }
stylo_malloc_size_of = "0.19.0"
stylo_static_prefs = { version = "0.19.0", package = "genet-stylo-static-prefs" }
stylo_traits = { version = "0.19.0", package = "genet-stylo-traits" }
syn = { version = "2", default-features = false, features = ["clone-impls", "derive", "parsing"] }
synstructure = "0.13"
taffy = { version = "0.10.1", default-features = false, features = ["calc", "detailed_layout_info", "grid", "std"] }
tendril = { version = "0.5", features = ["encoding_rs"] }
tikv-jemalloc-sys = "0.6.1"
tikv-jemallocator = "0.6.1"
time = { package = "time", version = "0.3", features = ["large-dates", "local-offset", "serde"] }
tokio = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["logging"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.18", default-features = false }
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = "0.1.44"
tracing-perfetto = "0.1.5"
tracing-subscriber = "0.3.23"
tungstenite = "0.29"
unicode-bidi = "0.3.18"
unicode_categories = "0.1.1"
# Highlighted-text stack for xilem-serval's optional `highlight` feature: illume
# (portable lexer: djot structure + code injection + prose entities) and tinct
# (perceptual seed-to-palette, with the syntax-role palette). Both are standalone
# sibling libs; xilem-serval is the assembly point that maps illume's kinds onto
# tinct's roles, so every genet host gets highlighted editing for free.
# Adopted as components 2026-07-10 (inker-adoption plan, companion rehomes):
# the text/editing column consolidates here — illume spans, tinct palettes,
# knot-editor-host editor model, xilem-serval text surfaces. Both keep
# MIT/Apache per-crate and their published identities.
illume = { version = "=0.0.2", path = "components/illume" }
tinct = { version = "=0.1.2", path = "components/tinct" }
unicode-properties = { version = "0.1.4", features = ["emoji"] }
unicode-script = "0.5"
unicode-segmentation = "1.13.2"
url = "2.5"
urlpattern = "0.3"
utf-8 = "0.7"
uuid = { version = "1.23.1", features = ["v4", "v5"] }
vello = "0.9"
vello_cpu = "0.0.8"
webdriver = { version = "0.53.0", default-features = false }
webpki-roots = "1.0"
web_atoms = "0.2"
wgpu = "29"
wgpu-core = "29"
wgpu-types = "29"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
winapi = "0.3"
windows-sys = "0.61"
winit = "0.30.13"
wio = "0.2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
xml5ever = "0.39"
yuv = { version = "0.8.14", features = ["rayon"] }
zeroize = "1.8"

############################################################################################
## Workspace-local dependencies
############################################################################################
# All local path dependencies in the servo workspace, that use the workspace version, should
# be listed here, between the `Begin` and `End` comments, so that we can easily find and
# update the version requirements when bumping the workspace version.
# Begin workspace-version dependencies - Don't change this comment, we grep for it in scripts!
deny_public_fields = { package = "servo-deny-public-fields", version = "=0.2.0", path = "components/deny_public_fields" }
devtools_traits = { package = "servo-devtools-traits", version = "=0.2.0", path = "components/shared/devtools" }
embedder_traits = { package = "servo-embedder-traits", version = "=0.2.0", path = "components/shared/embedder" }
engine_observables_api = { package = "engine-observables-api", version = "=0.1.0", path = "components/shared/engine-observables-api" }
fonts = { package = "servo-fonts", version = "=0.2.0", path = "components/fonts" }
fonts_traits = { package = "servo-fonts-traits", version = "=0.2.0", path = "components/shared/fonts" }
hyper_serde = { package = "servo-hyper-serde", version = "=0.2.0", path = "components/hyper_serde" }
layout_api = { package = "servo-layout-api", version = "=0.2.0", path = "components/shared/layout" }
layout_dom_api = { package = "layout-dom-api", version = "=0.1.0", path = "components/shared/layout-dom" }
malloc_size_of = { package = "servo-malloc-size-of", version = "=0.2.0", path = "components/malloc_size_of" }
media = { package = "servo-media-thread", version = "=0.2.0", path = "components/media/media-thread" }
net_traits = { package = "servo-net-traits", version = "=0.2.0", path = "components/shared/net" }
paint = { package = "servo-paint", version = "=0.2.0", path = "components/paint" }
paint_api = { package = "servo-paint-api", version = "=0.2.0", path = "components/shared/paint" }
# Moved to the netrender workspace as a neutral, engine-agnostic crate
# (extraction plan 2026-05-20). genet is now a consumer, not the owner.
paint_list_api = { git = "https://github.com/mark-ik/netrender.git", branch = "main", version = "0.1.0" }
# The PaintCmd -> netrender::Scene translator; also lives in the netrender
# workspace so any engine (genet, nematic, inker) can reuse the lowering.
paint_list_render = { git = "https://github.com/mark-ik/netrender.git", branch = "main", version = "0.1.0" }
paint_types = { package = "genet-paint-types", version = "=0.1.0", path = "components/shared/paint-types" }
pixels = { package = "servo-pixels", version = "=0.2.0", path = "components/pixels" }
profile = { package = "servo-profile", version = "=0.2.0", path = "components/profile" }
profile_traits = { package = "servo-profile-traits", version = "=0.2.0", path = "components/shared/profile" }
# `servo = "..."` workspace.dep removed 2026-05-15 per Mark's audit:
# genet used to be servo-the-fork, but the umbrella servo crate is no
# longer load-bearing. The two examples that depended on it
# (examples/wgpu-embedder, examples/non-presenting-wgpu-embedder) were
# removed from workspace.members in the same diff. Other servo-* entries
# below are kept for now since several still serve as workspace-internal
# paths for components that may be referenced — separate cleanup pass if
# they turn out to be vestigial.
servo-allocator = { version = "=0.2.0", path = "components/allocator" }
servo-base = { version = "=0.2.0", path = "components/shared/base" }
servo-canvas-traits = { version = "=0.2.0", path = "components/shared/canvas" }
servo-config = { version = "=0.2.0", path = "components/config" }
servo-config-macro = { version = "=0.2.0", path = "components/config/macro" }
servo-constellation-traits = { version = "=0.2.0", path = "components/shared/constellation" }
servo-default-resources = { version = "=0.2.0", path = "components/default-resources" }
servo-geometry = { version = "=0.2.0", path = "components/geometry" }
servo-media = { version = "=0.2.0", path = "components/media/servo-media" }
servo-media-audio = { version = "=0.2.0", path = "components/media/audio" }
servo-media-auto = { version = "=0.2.0", path = "components/media/backends/auto" }
servo-media-derive = { version = "=0.2.0", path = "components/media/servo-media-derive" }
servo-media-dummy = { version = "=0.2.0", path = "components/media/backends/dummy" }
servo-media-gstreamer = { version = "=0.2.0", path = "components/media/backends/gstreamer" }
servo-media-gstreamer-render = { version = "=0.2.0", path = "components/media/backends/gstreamer/render" }
servo-media-gstreamer-render-android = { version = "=0.2.0", path = "components/media/backends/gstreamer/render-android" }
servo-media-gstreamer-render-unix = { version = "=0.2.0", path = "components/media/backends/gstreamer/render-unix" }
servo-media-player = { version = "=0.2.0", path = "components/media/player" }
servo-media-streams = { version = "=0.2.0", path = "components/media/streams" }
servo-media-traits = { version = "=0.2.0", path = "components/media/traits" }
servo-media-webrtc = { version = "=0.2.0", path = "components/media/webrtc" }
servo-tracing = { version = "=0.2.0", path = "components/servo_tracing" }
servo-url = { version = "=0.2.0", path = "components/url" }
servo-wakelock = { version = "=0.2.0", path = "components/wakelock" }
storage_traits = { package = "servo-storage-traits", version = "=0.2.0", path = "components/shared/storage" }
webgpu = { package = "servo-webgpu", version = "=0.2.0", path = "components/webgpu" }
webgpu_traits = { package = "servo-webgpu-traits", version = "=0.2.0", path = "components/shared/webgpu" }
webgl_wgpu = { package = "servo-webgl-wgpu", version = "=0.2.0", path = "components/webgl-wgpu" }
webxr = { package = "servo-webxr", version = "=0.2.0", path = "components/webxr" }
webxr-api = { package = "servo-webxr-api", version = "=0.2.0", path = "components/shared/webxr" }
xpath = { package = "servo-xpath", version = "=0.2.0", path = "components/xpath" }
# End workspace-version dependencies - Don't change this comment, we grep for it in scripts!

# RSA key generation could be very slow without compilation
# optimizations, in development mode. Without optimizations, WPT might
# consider RSA key generation tests fail due to timeout.
# Building with higher optimization levels can speed up the key
# generation process to avoid false negative result in those tests.
# More details: <https://docs.rs/rsa/0.9.8/rsa/index.html#example>
[profile.dev.package.num-bigint-dig]
opt-level = 3

# Force tikv-jemalloc-sys to build with at least -O1.
# This can help with build environments that force _FORTIFY_SOURCE, such as Nix.
# More details: <https://github.com/tikv/jemallocator/issues/108>
[profile.dev.package.tikv-jemalloc-sys]
opt-level = 1

# An optimized build for CI, to improve test runtime, but with debug assertions turned on.
[profile.checked-release]
inherits = "release"
debug-assertions = true
overflow-checks = true

# Disk-space is limited in CI, so we disabled features that are not needed for code coverage.
# Locally using the default `dev` profile is perfectly fine.
[profile.coverage]
inherits = "dev"
incremental = false
debug = false

# A profile between `dev` and `release` which aims to offer a compromise between
# fast incremental rebuilds and runtime speed.
[profile.medium]
inherits = "dev"
opt-level = 2
incremental = true
debug = "line-tables-only"

[profile.production]
inherits = "release"
debug-assertions = false
lto = true
codegen-units = 1
opt-level = "s"

[profile.production-stripped]
inherits = "production"
strip = true

[profile.profiling]
inherits = "release"
debug-assertions = false
debug = true
lto = "thin"
codegen-units = 1

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# For html5ever:
#
# html5ever = { path = "../html5ever/html5ever" }
# markup5ever = { path = "../html5ever/markup5ever" }
# web_atoms = { path = "../html5ever/web_atoms" }
# xml5ever = { path = "../html5ever/xml5ever" }
# tendril = { path = "../html5ever/tendril" }
gpu-allocator = { path = "support/patches/gpu-allocator" }
# sonic-rs uses ahash with default features, whose `runtime-rng` pulled getrandom
# 0.3 (hard-codes wasm32) onto the shared ahash. This vendored copy drops
# runtime-rng on wasm (native keeps it), so the wasm graph carries no getrandom 0.3
# and needs no getrandom patch. Retire when ahash ships a release on getrandom 0.4.
sonic-rs = { path = "support/patches/sonic-rs-0.5.8" }
# taffy fork, re-vendored 2026-07-12 onto the newest STABLE release (0.12.1 —
# `float_layout` graduated from experimental, ending the need to ride the
# experimental-cache-fix line). Carries three patches, each upstreamed at our
# own pace (see support/patches/taffy/GENET_PATCHES.md + UPSTREAM_PR.md):
# `find_content_slot` width-fit (a full-width float yielded a zero-width slot
# at its right edge, placing a fixed-width BFC child there instead of below
# the float — present on taffy `main` too), a float exclusion-band accessor
# (feeds genet's parley-measured inline float wrap), and flex `order` (taffy
# does not model CSS `order`). Only the `=0.12.1` requirement (genet-layout +
# stylo_taffy) is redirected; the workspace's plain taffy 0.10.1 is
# unaffected. See docs/2026-07-12_ring3_fork_rename_publish_plan.md (T0) and
# docs/2026-05-31_css_rendering_conformance_plan.md (floats × BFC, the
# original patch's context).
taffy = { path = "support/patches/taffy" }
# stylo_taffy fork, vendored 2026-07-12 at 0.3.0-beta.1 (the first stylo_taffy
# release targeting taffy 0.12.x; alpha.5/6 still pinned the experimental
# line). Two edits from the published source, both to match genet's actual
# stylo fork surface rather than the registry `stylo` lineage stylo_taffy's
# authors track: `TrackBreadth::Flex` reverted to `TrackBreadth::Fr` (our
# fork's servo/stylo-derived variant name/shape; beta.1's is a newtype,
# ours a bare float) — everything else (the taffy 0.12
# AlignContent/AlignItems bitflag-style consts) is upstream's own change,
# taken as-is. See support/patches/stylo_taffy/ and
# docs/2026-07-12_ring3_fork_rename_publish_plan.md (T2).
stylo_taffy = { path = "support/patches/stylo_taffy" }
# Nova fork (genet-embedder branch on github.com/mark-ik/nova). Carries the
# EmbedderObject native-data patch plus the reflector-liveness weak-ref API
# (`EmbedderObject::into_weak_ref`/`from_weak_ref` + `clear_weak_ref_kept_objects`,
# G1 in docs/2026-06-11_gc_arena_dom_plan.md). Git dep so a bare clone resolves
# without the sibling checkout; for local nova dev, the gitignored
# `Code/.cargo/config.toml` `paths` override redirects this to `../../crates/nova`.
nova_vm = { git = "https://github.com/mark-ik/nova", branch = "genet-embedder" }
# Boa fork (genet branch on github.com/mark-ik/boa) tracking boa-upstream main
# (the 1.0.0-dev line). Carries an additive source patch — `JsObject::downgrade()`
# + `WeakJsObject`, for the reflector-liveness weak cache (G1 in
# docs/2026-06-11_gc_arena_dom_plan.md). boa_engine pulls its sibling boa_* crates
# via boa's own intra-repo path deps, so only boa_engine + boa_gc are named from
# crates.io (by script-engine-boa) and need patching. Git deps so a bare clone
# resolves; for local boa dev, the gitignored `Code/.cargo/config.toml` `paths`
# override redirects these to `../../crates/boa`.
# See docs/2026-05-20_genet_script_engine_plan.md.
boa_engine = { git = "https://github.com/mark-ik/boa.git", branch = "genet" }
boa_gc = { git = "https://github.com/mark-ik/boa.git", branch = "genet" }
# ipc-channel: in-process fork, vendored at support/patches/ipc-channel (like
# taffy + gpu-allocator). Servo's multiprocess IPC transport is vestigial in
# genet's single-process embedding (pelt; and mere's library use), so the fork
# defaults to ipc-channel's built-in force-inprocess backend and makes the OS deps
# optional. That drops the windows 0.61 dependency, whose loose <=0.62 range
# otherwise let gpu-allocator latch onto 0.61.3 while wgpu-hal forces 0.62, breaking
# the dx12 suballocator in any build that compiles the dx12 backend (meerkat, via
# scrying). Vendored, not a git fork, since the change is manifest-only.
ipc-channel = { path = "support/patches/ipc-channel" }
# NOTE: stylo/stylo_atoms used to be redirected here via `[patch.crates-io]`
# (unifying stylo_taffy's crates.io `^0.18` requirement with genet's git
# rev, since `stylo` declares `links = "servo_style_crate"` — only one Stylo
# allowed in the graph). Removed 2026-07-12 (T3 of
# docs/2026-07-12_ring3_fork_rename_publish_plan.md, the stylo rename to
# `genet-stylo`/`genet-stylo-atoms`): `[patch]` cannot rename its target
# (the patch source's package name must match the registry name being
# replaced). The renamed family now has its own registry packages, consumed
# through `[workspace.dependencies]` above and directly by the vendored
# stylo_taffy adapter. See docs/2026-05-20_stylo_taffy_adoption_plan.md
# and the css transitions plan for the original rationale.
# vello patch removed 2026-05-15 per Mark's audit — bumping to vello 0.9
# directly from crates.io. If vello upstream needs a fork applied later,
# re-add here pinned to a specific upstream version.
# For WebRender / netrender:
# The netrender/ workspace (formerly the webrender-wgpu fork) dropped
# webrender, webrender_api, and wr_malloc_size_of as separate crates. Local
# stubs in support/patches/ restore workspace loadability while consumers
# are migrated to netrender's surface (post-cut C2-C4 work).

#
# Or for mozjs:
#
# mozjs = { path = "../mozjs/mozjs" }
# mozjs_sys = { path = "../mozjs/mozjs-sys" }
#
# Or for CSP crate:
# content-security-policy = { path = "../rust-content-security-policy" }
#
# Or for Stylo:
#
# [patch."https://github.com/servo/stylo"]
# selectors = { path = "../stylo/selectors" }
# servo_arc = { path = "../stylo/servo_arc" }
# stylo = { path = "../stylo/style" }
# stylo_atoms = { path = "../stylo/stylo_atoms" }
# stylo_dom = { path = "../stylo/stylo_dom" }
# stylo_malloc_size_of = { path = "../stylo/malloc_size_of" }
# stylo_static_prefs = { path = "../stylo/stylo_static_prefs" }
# stylo_traits = { path = "../stylo/style_traits" }
#
# Or for another Git dependency:
#
# [patch."https://github.com/servo/<repository>"]
# <crate> = { path = "/path/to/local/checkout" }
#
