[package]
name = "genet-documents"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository = "https://github.com/mark-ik/genet"
description = "Genet's retained document sessions — the static, scripted, and smolweb content lanes as inker session engines (2026-07-10 session-engines plan). Formerly pelt's convenience lanes; pelt is now one consumer among hosts."
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = []
# Clean-room Livery implementation of the static HTML session lane.
livery = ["dep:genet-livery", "dep:paint_list_render", "dep:url"]
# Remote http(s) loading for LocalFetcher via the netfetcher engine.
netfetch = ["dep:netfetcher", "dep:tokio", "dep:bytes", "dep:url"]
# The smolweb engine-native lane: errand transport, Nematic EngineDocument
# lowering, and document-canvas layout/paint.
smolweb = [
    "dep:errand", "dep:nematic", "dep:document-canvas", "dep:tokio", "dep:url",
]
# The scripted lane: a live ScriptedDocument on Boa.
scripted = [
    "dep:genet-scripted", "dep:script-engine-api", "dep:script-engine-boa", "dep:url",
]
# Add the Nova engine as a second scripted rung (64-bit targets).
scripted-nova = ["scripted", "dep:script-engine-nova"]

[dependencies]
# The engine contracts this component implements (SessionEngine<Scene>).
inker = { workspace = true }
# The host-shell fetch seam (pelt-core is a light contracts crate; the dep
# direction is by weight — promoting it to components/shared is a noted wart).
pelt-core = { workspace = true }
netrender = { workspace = true }
genet-layout = { path = "../genet-layout" }
genet-render = { path = "../genet-render" }
genet-static-dom = { path = "../genet-static-dom" }
layout_dom_api = { workspace = true }
genet-livery = { path = "../genet-livery", optional = true }
paint_list_render = { workspace = true, optional = true }
data-url = { workspace = true }

genet-scripted-dom = { path = "../genet-scripted-dom", optional = true }
genet-scripted = { path = "../genet-scripted", features = ["render"], optional = true }
script-engine-api = { path = "../script-engine-api", optional = true }
script-engine-boa = { path = "../script-engine-boa", optional = true }
script-engine-nova = { path = "../script-engine-nova", optional = true }
nematic = { workspace = true, optional = true }
document-canvas = { workspace = true, features = ["netrender"], optional = true }
errand = { workspace = true, optional = true }
# Same git source pelt uses; not a root workspace entry (sibling repo).
netfetcher = { path = "../netfetcher", optional = true }
tokio = { workspace = true, features = ["rt"], optional = true }
bytes = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
# Offline mock HTTP server for the netfetch integration test (moved with
# net_fetch.rs from pelt); runs without a live network.
mockito = "1"
image = { workspace = true }
